--- a/src/components/todos.css
+++ b/src/components/todos.css
@@ -9,13 +9,20 @@
     width: 100%;
 }
 
- .todos-input{
+.todos-input{
      flex: 1;
+     position: relative;
+     top: 0;
  }
  
-  .todos-input-input {
+.todos-input-input {
     width: 100%;
     box-sizing: border-box;
+}
+.todos-input-input-hint {
+    background-color: lightgreen;
+    position: absolute;
+    /*border: 1px solid gray;*/
 }
 
 
